# new-auctionspace

./: .gitignore  Anchor.toml  README.md  package.json
.devcontainer/: Dockerfile  devcontainer.json
programs/auction-space/: Cargo.toml
programs/auction-space/src/: lib.rs
programs/auction-space/src/archive/: advertiser.rs  auction.rs  auction_backout.rs  publisher.rs  utils.rs
programs/auction-space/src/errors/: auction_errors.rs  mod.rs
programs/auction-space/src/instructions/: adv_backout.rs  backout_utils.rs  bid.rs  mod.rs  new_advertiser.rs  new_auction.rs  new_item.rs  new_publisher.rs  pub_backout.rs
programs/auction-space/src/state/: advertiser.rs  auction.rs  item.rs  mod.rs  publisher.rs
tests/: auction-methods.test.ts  bid.test.ts  init-methods.test.ts  newAdvertiser.test.ts  newAuction.test.ts  newPublisher.test.ts  setup.ts
tests/utils/: getAdvertisers.ts  getAuction.ts  getItem.ts  getPublishers.ts  getWallets.ts  requestAirdrops.ts  util.test.ts
