[package]
name = "auction-space"
version = "0.1.0"
description = "Created with Anchor"
edition = "2024"
resolver = "3"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_space"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
spl-token = "4.0.0"
